--- a/лр 12.html
+++ b/лр 12.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="C:\информатика/любофь.css">
+    <link rel="stylesheet" href="css.css">
   <meta charset="utf-8">
   <title>Комп’ютерна графіка</title>
   </head>
